// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ðə kiːg siːz ðə wʊlf",
    },
    {
      "english": "the dogs see the wolves",
      "target": "ðə dɔːdɔːg siː ðə wʊwʊlf",
    },
    {
      "english": "i give you the bread",
      "target": "aj gɪvɪŋ ju",
    },
    {
      "english": "the king walks at the river",
      "target": "ðə kiːg wɔːkɪŋz æt ðə ɹiːvəɹ",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ðə kiːg nat siːz ðə wʊlf",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ɾege βideɾet lupuum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "kanei βideɾent lupuium",
    },
    {
      "english": "i give you the bread",
      "target": "ego daɾeo tuum",
    },
    {
      "english": "the king walks at the river",
      "target": "ɾege ambulaɾet flume",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ɾege non βideɾet lupuum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "niminimi lukin soːweːliwasoː",
    },
    {
      "english": "the dogs see the wolves",
      "target": "soːsoːweːli lukin soːsoːweːliwasoː",
    },
    {
      "english": "i give you the bread",
      "target": "mi pana sina",
    },
    {
      "english": "the king walks at the river",
      "target": "niminimi tawatowa sape telosunoː",
    },
    {
      "english": "the king does not see the wolf",
      "target": "niminimi ala lukin soːweːliwasoː",
    },
  ],
  "preset": "tokipona",
}
`;
